--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,8 @@
 name: 'Composite action for jamstack'
+inputs:
+ app-location: 
+   default: '/'
+   required: true
 runs:
  using: "composite"
  steps:
@@ -15,44 +19,19 @@ runs:
          username: ${{ secrets.AZURE_CLIENT_ID }}
          password: ${{ secrets.AZURE_CLIENT_SECRET }} 
        # This is a separate action that sets up buildx runner
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1    
-      - name: Cache docker layers
-        id: cache
-        uses: actions/cache@v2
-        with:
-         path: /tmp/.buildx-cache
-         key: ${{ runner.os }}-buildx-${{ github.sha }}
-         restore-keys: |
-          ${{ runner.os }}-buildx-    
-      - name: Docker image ls
-        run: docker image ls --digests --no-trunc   
       - name: Cache NPM dependencies
         uses: actions/cache@v3
         with:
          path: |
            .npm
-           node_modules
+          # node_modules
          key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
          restore-keys: |
-          ${{ runner.OS }}-npm2-cache-   
-      # And make it available for builds
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: false
-          tags: jamstacktest.azurecr.io/oryx/build:azfunc-jamstack-debian-bullseye-Install-libedit
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Docker pull step
-        run: docker pull jamstacktest.azurecr.io/oryx/build:azfunc-jamstack-debian-bullseye-Install-libedit   
-      - name: Docker image ls
-        run: docker image ls --digests --no-trunc 
+          ${{ runner.OS }}-npm-cache-    
       - name: Oryx build step
         uses: snehapar9/jamstack-docker-action@snehapar/oryx-build
         id: oryx-build
         with:
-          app-location: "/"
+          app-location: ${{ inputs.app-location }}
       - name: Docker image ls
         run: docker image ls --digests --no-trunc
