--- a/action.yml
+++ b/action.yml
@@ -12,12 +12,12 @@ runs:
         uses: actions/checkout@v3  
       - name: Install Azure-cli
         uses: elstudio/action-install-azure-cli@v1
-      - name: Log in to Azure Container Registry
-        uses: docker/login-action@v2.0.0
-        with: 
-         registry: jamstacktest.azurecr.io
-         username: ${{ secrets.AZURE_CLIENT_ID }}
-         password: ${{ secrets.AZURE_CLIENT_SECRET }} 
+      # - name: Log in to Azure Container Registry
+      #   uses: docker/login-action@v2.0.0
+      #   with: 
+      #    registry: jamstacktest.azurecr.io
+      #    username: ${{ secrets.AZURE_CLIENT_ID }}
+      #    password: ${{ secrets.AZURE_CLIENT_SECRET }} 
        # This is a separate action that sets up buildx runner
       - name: Cache NPM dependencies
         uses: actions/cache@v3
