--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,14 @@
 name: 'Composite action for jamstack'
-inputs:
- app-location: 
-   default: '/'
-   required: true
-runs:
- using: "composite"
+
+on: 
+ workflow_call:
+   inputs:
+     app-location: 
+       default: '/'
+       required: true
+jobs:
+ Composite-job:
+ runs-on: ubuntu-latest
  steps:
       # To use this repository's private action,
       # you must check out the repository
@@ -12,18 +16,18 @@ runs:
         uses: actions/checkout@v3  
       - name: Install Azure-cli
         uses: elstudio/action-install-azure-cli@v1
-      # - name: Log in to Azure Container Registry
-      #   uses: docker/login-action@v2.0.0
-      #   with: 
-      #    registry: jamstacktest.azurecr.io
-      #    username: ${{ secrets.AZURE_CLIENT_ID }}
-      #    password: ${{ secrets.AZURE_CLIENT_SECRET }} 
+      - name: Log in to Azure Container Registry
+        uses: docker/login-action@v2.0.0
+        with: 
+         registry: jamstacktest.azurecr.io
+         username: ${{ secrets.AZURE_CLIENT_ID }}
+         password: ${{ secrets.AZURE_CLIENT_SECRET }} 
        # This is a separate action that sets up buildx runner
       - name: Cache NPM dependencies
         uses: actions/cache@v3
         with:
          path: |
-           .npm
+           ~/.npm
           # node_modules
          key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
          restore-keys: |
