--- a/action.yml
+++ b/action.yml
@@ -1,15 +1,15 @@
 name: 'Composite action for jamstack'
-
-on: 
- workflow_call:
-   inputs:
-     app-location: 
-       default: '/'
-       required: true
-jobs:
- Composite-job:
- runs-on: ubuntu-latest
- steps:
+inputs:
+  app-location: 
+    default: '/'
+    required: true
+  username: 
+    default: ${{ secrets.AZURE_CLIENT_ID }}
+  password: 
+    default: ${{ secrets.AZURE_CLIENT_SECRET }}    
+runs:
+  using: "composite"
+  steps:
       # To use this repository's private action,
       # you must check out the repository
       - name: Checkout
@@ -20,8 +20,8 @@ jobs:
         uses: docker/login-action@v2.0.0
         with: 
          registry: jamstacktest.azurecr.io
-         username: ${{ secrets.AZURE_CLIENT_ID }}
-         password: ${{ secrets.AZURE_CLIENT_SECRET }} 
+         username: ${{ inputs.username }}
+         password: ${{ inputs.password }} 
        # This is a separate action that sets up buildx runner
       - name: Cache NPM dependencies
         uses: actions/cache@v3
