--- a/action.yml
+++ b/action.yml
@@ -23,15 +23,22 @@ runs:
          username: ${{ inputs.username }}
          password: ${{ inputs.password }} 
        # This is a separate action that sets up buildx runner
-      - name: Cache NPM dependencies
-        uses: actions/cache@v3
+      # - name: Cache NPM dependencies
+      #   uses: actions/cache@v3
+      #   with:
+      #    path: |
+      #       npm
+      #     # node_modules
+      #    key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+      #    restore-keys: |
+      #     ${{ runner.OS }}-npm-cache-    
+      - name: Cache npm dependencies
+        uses: actions/cache@v2
         with:
-         path: |
-            npm
-          # node_modules
-         key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-         restore-keys: |
-          ${{ runner.OS }}-npm-cache-    
+          path: '~/.npm'
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - name: Oryx build step
         uses: snehapar9/jamstack-docker-action@snehapar/oryx-build
         id: oryx-build
