--- a/action.yml
+++ b/action.yml
@@ -12,16 +12,16 @@ runs:
   steps:
       # To use this repository's private action,
       # you must check out the repository
-      - name: Checkout
-        uses: actions/checkout@v3  
-      - name: Install Azure-cli
-        uses: elstudio/action-install-azure-cli@v1
-      - name: Log in to Azure Container Registry
-        uses: docker/login-action@v2.0.0
-        with: 
-         registry: jamstacktest.azurecr.io
-         username: ${{ inputs.username }}
-         password: ${{ inputs.password }} 
+#       - name: Checkout
+#         uses: actions/checkout@v3  
+#       - name: Install Azure-cli
+#         uses: elstudio/action-install-azure-cli@v1
+#       - name: Log in to Azure Container Registry
+#         uses: docker/login-action@v2.0.0
+#         with: 
+#          registry: jamstacktest.azurecr.io
+#          username: ${{ inputs.username }}
+#          password: ${{ inputs.password }} 
        # This is a separate action that sets up buildx runner
       # - name: Cache NPM dependencies
       #   uses: actions/cache@v3
