--- a/action.yml
+++ b/action.yml
@@ -28,21 +28,21 @@ runs:
       #    key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
       #    restore-keys: |
       #     ${{ runner.OS }}-npm-cache-    
-#       - name: Cache npm dependencies
-#         uses: actions/cache@v2
-#         with:
-#           path: |
-#            '~/.npm'
-#           # **/node_modules
-#           key: ${{ runner.os }}-npm3-${{ hashFiles('**/package-lock.json') }}
-#           restore-keys: |
-#             ${{ runner.os }}-npm3-
-      - name: Cache Node Modules
-        id: node-cache
+      - name: Cache npm dependencies
         uses: actions/cache@v2
         with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('package-lock.json') }}
+          path: |
+           '~/.npm'
+          # **/node_modules
+          key: ${{ runner.os }}-npm3-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm3-
+#       - name: Cache Node Modules
+#         id: node-cache
+#         uses: actions/cache@v2
+#         with:
+#           path: node_modules
+#           key: node-modules-${{ hashFiles('package-lock.json') }}
       - name: Oryx build step
         uses: snehapar9/jamstack-docker-action@snehapar/oryx-build
         id: oryx-build
