--- a/action.yml
+++ b/action.yml
@@ -32,7 +32,7 @@ runs:
         uses: actions/cache@v3
         with:
           path: |
-            .npm
+            npm
          #  **/node_modules
           key: ${{ runner.os }}-npm3-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
