--- a/action.yml
+++ b/action.yml
@@ -37,6 +37,19 @@ runs:
           key: ${{ runner.os }}-npm3-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-npm3-
+         - name: Cache node modules
+           id: cache-npm
+           uses: actions/cache@v3
+           env:
+             cache-name: cache-node-modules
+           with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+             path: ~/.npm
+             key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+             restore-keys: |
+               ${{ runner.os }}-build-${{ env.cache-name }}-
+               ${{ runner.os }}-build-
+               ${{ runner.os }}-    
 #       - name: Cache Node Modules
 #         id: node-cache
 #         uses: actions/cache@v2
