--- a/action.yml
+++ b/action.yml
@@ -28,15 +28,15 @@ runs:
       #    key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
       #    restore-keys: |
       #     ${{ runner.OS }}-npm-cache-    
-      - name: Cache npm dependencies
-        uses: actions/cache@v2
+      - name: Cache NPM dependencies
+        uses: actions/cache@v3
         with:
-          path: |
-            '~/.npm'
-            **/node_modules
-          key: ${{ runner.os }}-npm3-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm3-
+         path: |
+           .npm
+           node_modules
+         key: ${{ runner.OS }}-npm2-cache-${{ hashFiles('**/package-lock.json') }}
+         restore-keys: |
+          ${{ runner.OS }}-npm2-cache-
 #       - name: Cache node modules
 #         id: cache-npm
 #         uses: actions/cache@v3
